# Axia-Network-frontier

./: Cargo.toml  README.md  SECURITY.md
.maintain/node-template-release/src/: main.rs
client/consensus/: Cargo.toml
client/consensus/src/: lib.rs
client/db/: Cargo.toml
client/db/src/: lib.rs  utils.rs
client/mapping-sync/: Cargo.toml
client/mapping-sync/src/: lib.rs  worker.rs
client/rpc/: Cargo.toml
client/rpc-core/: Cargo.toml
client/rpc-core/src/: eth.rs  eth_pubsub.rs  lib.rs  net.rs  web3.rs
client/rpc-core/src/types/: account_info.rs  block.rs  block_number.rs  bytes.rs  call_request.rs  filter.rs  index.rs  log.rs  mod.rs  pubsub.rs  receipt.rs  sync.rs  transaction.rs  transaction_request.rs  work.rs
client/rpc/src/: eth.rs  eth_pubsub.rs  format.rs  lib.rs
client/rpc/src/overrides/: mod.rs  schema_v1_override.rs
docs/: index.md  node-template-release.md  package.json
docs/.vuepress/: config.js
docs/frame/: evm.md
frame/dynamic-fee/: Cargo.toml
frame/dynamic-fee/src/: lib.rs  tests.rs
frame/ethereum/: Cargo.toml
frame/ethereum/src/: lib.rs  mock.rs  tests.rs
frame/evm/: Cargo.toml  README.md
frame/evm/precompile/blake2/: Cargo.toml
frame/evm/precompile/blake2/src/: eip_152.rs  lib.rs
frame/evm/precompile/bn128/: Cargo.toml
frame/evm/precompile/bn128/src/: lib.rs
frame/evm/precompile/curve25519/: Cargo.toml
frame/evm/precompile/curve25519/src/: lib.rs
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/dispatch/src/: lib.rs
frame/evm/precompile/ed25519/: Cargo.toml
frame/evm/precompile/ed25519/src/: lib.rs
frame/evm/precompile/modexp/: Cargo.toml
frame/evm/precompile/modexp/src/: lib.rs
frame/evm/precompile/sha3fips/: Cargo.toml
frame/evm/precompile/sha3fips/src/: lib.rs
frame/evm/precompile/simple/: Cargo.toml
frame/evm/precompile/simple/src/: lib.rs
frame/evm/src/: backend.rs  benchmarks.rs  lib.rs  mock.rs  tests.rs
frame/evm/src/runner/: mod.rs  stack.rs
frame/evm/test-vector-support/: Cargo.toml
frame/evm/test-vector-support/src/: lib.rs
primitives/consensus/: Cargo.toml
primitives/consensus/src/: lib.rs
primitives/evm/: Cargo.toml
primitives/evm/src/: lib.rs  precompile.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs
primitives/self-contained/: Cargo.toml
primitives/self-contained/src/: checked_extrinsic.rs  lib.rs  unchecked_extrinsic.rs
primitives/storage/: Cargo.toml
primitives/storage/src/: lib.rs
template/: Dockerfile  README.md
template/examples/contract-erc20/: create-erc20.ts  package-lock.json  package.json
template/examples/contract-erc20/truffle/: package-lock.json  package.json
template/examples/contract-hello/: package-lock.json  package.json
template/node/: Cargo.toml
template/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
template/runtime/: Cargo.toml
template/runtime/src/: lib.rs
template/utils/: evm-address.js  package-lock.json  package.json
