[package]
name = "fc-db"
version = "2.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "Frontier database backend"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/axia-tech/frontier/"

[dependencies]
sp-core = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-database = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-ethereum = { version = "4.0.0-dev", path = "../../frame/ethereum" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage"}
kvdb = { git = "https://github.com/axia-tech/axia-common", branch = "master" }
kvdb-rocksdb = { git = "https://github.com/axia-tech/axia-common", branch = "master" }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", features = ["derive"] }
parking_lot = "0.11.1"
