[package]
name = "fc-rpc-core"
version = "1.1.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
description = "RPC traits of Ethereum."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
jsonrpc-core = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0" }
jsonrpc-core-client = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0" }
jsonrpc-derive = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0" }
jsonrpc-pubsub = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0" }
rustc-hex = "2.1.0"
ethereum-types = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.12.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
