[package]
name = "pallet-ethereum"
version = "4.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
description = "Ethereum compatibility full block processing emulation pallet for Axlib."
license = "Apache-2.0"
resolver = "2"

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.101", optional = true }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-evm = { version = "6.0.0-dev", default-features = false, path = "../evm" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }
evm = { git = "https://github.com/axia-tech/evm", branch = "master", features = ["with-codec"], default-features = false }

ethereum = { git = "https://github.com/axia-tech/ethereum", branch = "master", default-features = false, features = ["with-codec"] }
ethereum-types = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.12.1", default-features = false }
rlp = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus", default-features = false }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc", default-features = false }
fp-storage = { version = "2.0.0", path = "../../primitives/storage", default-features = false }
fp-self-contained = { version = "1.0.0-dev", path = "../../primitives/self-contained", default-features = false }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = ["derive"] }
num_enum = { version = "0.5.4", default-features = false }

[dev-dependencies]
sp-core = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axlib", branch = "dev" }
libsecp256k1 = { version = "0.5", features = ["static-context", "hmac"] }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"serde",
	"rustc-hex/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-evm/std",
	"sp-io/std",
	"sp-std/std",
	"fp-evm/std",
	"ethereum/std",
	"ethereum-types/std",
	"rlp/std",
	"sha3/std",
	"fp-consensus/std",
	"fp-rpc/std",
	"fp-storage/std",
	"evm/std",
	"fp-self-contained/std",
	"scale-info/std",
	"num_enum/std",
]
