[package]
name = "fp-evm"
version = "3.0.0-dev"
license = "Apache-2.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
homepage = "https://axlib.io"
repository = "https://github.com/axia-tech/frontier/"
description = "Primitive EVM abstractions for Axlib."
documentation = "https://docs.rs/sp-evm"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }
evm = { git = "https://github.com/axia-tech/evm", branch = "master", features = ["with-codec"], default-features = false }
impl-trait-for-tuples = "0.1"

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-std/std",
	"serde",
	"codec/std",
	"evm/std",
	"evm/with-serde",
]
