[package]
name = "fp-rpc"
version = "3.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network"]
edition = "2018"
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Axlib."
license = "Apache-2.0"

[dependencies]
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }
ethereum = { git = "https://github.com/axia-tech/ethereum", branch = "master", default-features = false, features = ["with-codec"] }

ethereum-types = { git = "https://github.com/axia-tech/axia-common", branch = "master", version = "0.12.1", default-features = false }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-api/std",
	"fp-evm/std",
	"ethereum/std",
	"ethereum-types/std",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
]
