[package]
name = "fp-self-contained"
version = "1.0.0-dev"
license = "Apache-2.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
homepage = "https://axlib.io"
repository = "https://github.com/axia-tech/frontier/"
description = "Primitive Ethereum abstractions for Axlib."
documentation = "https://docs.rs/fp-ethereum"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }
ethereum = { git = "https://github.com/axia-tech/ethereum", branch = "master", default-features = false, features = ["with-codec"] }
sp-core = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-io = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = ["derive"] }
axia-util-mem = { git = "https://github.com/axia-tech/axia-common", branch = "master", optional = true }
sha3 = { version = "0.8", default-features = false }
frame-support = { version = "4.0.0-dev", git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"ethereum/std",
	"sp-core/std",
	"sp-runtime/std",
	"scale-info/std",
	"axia-util-mem",
	"sha3/std",
	"frame-support/std",
]