[package]
name = "pallet-evm-test-vector-support"
version = "1.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axia-tech/frontier/"
description = "Test vector support for EVM pallet."

[dependencies]
hex = { version = "0.4.0", optional = true }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
evm = { git = "https://github.com/axia-tech/evm", branch = "master", features = ["with-codec"], default-features = false }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../primitives/evm" }

[features]
default = ["std"]
std = [
	"hex",
	"serde",
	"serde_json",
	"evm/std",
	"fp-evm/std",
]
