[package]
name = "pallet-evm-precompile-bn128"
version = "2.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axia-tech/frontier/"
description = "BN128 precompiles for EVM pallet."

[dependencies]
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
bn = { package = "axlib-bn", version = "0.6", default-features = false }

[dev-dependencies]
pallet-evm-test-vector-support = { version = "1.0.0-dev", path = "../../test-vector-support" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
]
