[package]
name = "pallet-evm-precompile-dispatch"
version = "2.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://axlib.io"
repository = "https://github.com/axia-tech/frontier/"
description = "DISPATCH precompiles for EVM pallet."

[dependencies]
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/axia-tech/axlib", branch = "dev" }
pallet-evm = { version = "6.0.0-dev", default-features = false, path = "../.." }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../../../primitives/evm" }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-evm/std",
	"fp-evm/std",
	"codec/std",
]
